@@ -19,13 +19,11 @@
 package com.guardtime.ksi.service;
 
 import java.io.ByteArrayInputStream;
-import java.nio.ByteBuffer;
 import java.util.Date;
 
 import com.guardtime.ksi.exceptions.KSIException;
 import com.guardtime.ksi.hashing.DataHash;
 import com.guardtime.ksi.publication.PublicationsFile;
-import com.guardtime.ksi.publication.PublicationsFileFactory;
 import com.guardtime.ksi.service.aggregation.AggregationRequest;
 import com.guardtime.ksi.service.aggregation.AggregationRequestPayload;
 import com.guardtime.ksi.service.client.KSIExtenderClient;
