@@ -4,13 +4,13 @@ import com.guardtime.ksi.exceptions.KSIException;
 import com.guardtime.ksi.unisignature.KSISignature;
 import com.guardtime.ksi.unisignature.verifier.VerificationResult;
 
-public class KsiSignatureNotValidException extends KSIException {
+public class InvalidSignatureContentException extends KSIException {
 
     private KSISignature signature;
     private VerificationResult verificationResult;
 
-    public KsiSignatureNotValidException(InMemoryKsiSignature signature, VerificationResult verificationResult) {
-        super("Invalid KSI signature: " + verificationResult.getErrorCode() + "('"+verificationResult.getErrorCode().getMessage()+"')");
+    public InvalidSignatureContentException(InMemoryKsiSignature signature, VerificationResult verificationResult) {
+        super("Signature (inputHash:" + signature.getInputHash() + ", extended=" + signature.isExtended() + ") is invalid: " + verificationResult.getErrorCode() + "('" + verificationResult.getErrorCode().getMessage() + "')");
         this.signature = signature;
         this.verificationResult = verificationResult;
     }
